--- a/Main.java/src/view/UsuarioPanel.form
+++ b/Main.java/src/view/UsuarioPanel.form
@@ -47,10 +47,7 @@
                                       <EmptySpace min="-2" pref="372" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" attributes="0">
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="BotaoApagarCampos" min="-2" pref="150" max="-2" attributes="0"/>
-                                          <Component id="CampoPesquisaNome" max="32767" attributes="0"/>
-                                      </Group>
+                                      <Component id="CampoPesquisaNome" max="32767" attributes="0"/>
                                       <EmptySpace min="-2" pref="258" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
@@ -70,11 +67,16 @@
                       <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
-                      <Component id="BotaoCadastrarUsuario1" min="-2" pref="149" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="BotaoRemoverUsuario" min="-2" pref="149" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="BotaoAtualizarUsuario" min="-2" pref="149" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="BotaoApagarCampos" min="-2" pref="150" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Component id="BotaoCadastrarUsuario1" min="-2" pref="149" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Component id="BotaoRemoverUsuario" min="-2" pref="149" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Component id="BotaoAtualizarUsuario" min="-2" pref="149" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
